<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anime Manager Mobile</string>
    <string name="app_label">AMM</string>
    <string name="rss_main">RSS Reader</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search Anime/Manga</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_watch">Currently watching</string>
    <string name="view_read">View read manga</string>
    <string name="view_toread">View manga backlog</string>
    <string name="view_towatch">View anime backlog</string>
    <string name="edit_read">Currently reading</string>
    <string name="menu_add">Add</string>
    <string name="list_location">List location</string>
    <string name="select_store">Please select an option for storage</string>
    <string name="fansub_list">Edit Fansub teams</string>
    <string name="view_list">View another list</string>
    <string name="fetch_metadata">Fetch MetaData</string>
    <string name="frag_general">General</string>
    <string name="frag_chars">Characters</string>
    <string name="frag_desc">Description</string>
    <string name="frag_eps">Episodes</string>
    <string name="frag_cats">Categories</string>
    <string name="frag_tags">Tags</string>
    <string name="frag_related">Related Series</string>
    <string name="wait_fs">Please wait for filesystem sync</string>
    <string name="ok_button_label">go!</string>
    <string name="meta_storage">Metadata storage</string>
    <string name="show_options">Possible Shows:</string>

</resources>